# SIRAH

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: gemini.md  history.md  roadmap.md
docs/architecture/: ADR-001-initial-repository-structure.md  ADR-002-reconstruction-from-legacy-prototype.md  ADR-003-laboratory-console-boundary.md  ADR-004-situational-initiative-simulation.md  boundaries.md
docs/components/: dialogue-and-perception.md  esp32-cam.md  face-controller.md
examples/: gemini_smoke.py  interactive_conversation.py  offline_conversation.py
experiments/velxio/greet_person_preview/: README.md  example_serial_session.txt  greet_person_preview.ino
experiments/velxio/greet_person_preview/velxio_export/: diagram.json  sketch.ino
src/sirah/: __init__.py  capabilities.py  context.py  conversation.py  cortex_integration.py  demo.py  errors.py  fake_intelligence.py  gemini.py  intelligence.py  interaction.py  local_commands.py  simulated_robot.py  simulation.py  situational.py  situational_runtime.py  speech.py  system.py
tests/: test_capabilities.py  test_console.py  test_context.py  test_conversation.py  test_cortex_integration.py  test_gemini.py  test_intelligence.py  test_package.py  test_situational.py  test_system.py
