[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sirah"
version = "0.1.0.dev0"
description = "Safe conversational orchestration for the SIRAH robotic system"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["sirah-cortex==0.1.0a1"]

[project.optional-dependencies]
gemini = ["google-genai", "pydantic"]
dev = ["build", "google-genai", "mypy", "pydantic", "pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sirah*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
line-length = 88
target-version = "py313"
